[metadata]
name = sirendb
author = Matt Ullman
author_email = matt@airraidsirens.net
description = Online Database for Outdoor Warning Sirens

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.9
install_requires =
  attrs == 20.3.0
  cached-property == 1.5.2
  click == 7.1.2
  flake8 == 3.9.0
  flask == 1.1.2
  flask-login == 0.5.0
  flask-sqlalchemy == 2.5.1
  graphql-core == 3.1.3
  greenlet == 1.0.0
  hupper == 1.10.2
  iniconfig == 1.1.1
  itsdangerous == 1.1.0
  jinja2 == 2.11.3
  markupsafe == 1.1.1
  mccabe == 0.6.1
  packaging == 20.9
  pluggy == 0.13.1
  psycopg2 == 2.8.6
  py == 1.10.0
  pycodestyle == 2.7.0
  pyflakes == 2.3.1
  pygments == 2.8.1
  pyparsing == 2.4.7
  pytest == 6.2.2
  python-dateutil == 2.8.1
  python-dotenv == 0.16.0
  python-multipart == 0.0.5
  pyyaml == 5.4.1
  six == 1.15.0
  sqlalchemy == 1.4.4
  starlette == 0.14.2
  strawberry-graphql == 0.53.0
  toml == 0.10.2
  typing-extensions == 3.7.4.3
  werkzeug == 1.0.1

[options.extras_require]
dev =
  coverage == 5.5
  freezegun == 1.1.0
  pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths =
  tests

[flake8]
max-line-length = 120
per-file-ignores =
  # imported but unused
  __init__.py: F401

[coverage:run]
source =
  sirendb

[coverage:paths]
source =
  src

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
