[metadata]
name = sirendb
author = Matt Ullman
author_email = matt@airraidsirens.net
description = Online Database for Outdoor Warning Sirens

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.9
install_requires =
  alembic == 1.5.8
  cached-property == 1.5.2
  click == 7.1.2
  croniter == 1.0.12
  flask == 1.1.2
  flask-login == 0.5.0
  flask-migrate == 2.7.0
  flask-rq2 == 18.3
  flask-sqlalchemy == 2.5.1
  graphql-core == 3.1.3
  greenlet == 1.0.0
  hupper == 1.10.2
  iniconfig == 1.1.1
  itsdangerous == 1.1.0
  jinja2 == 2.11.3
  mako == 1.1.4
  markupsafe == 1.1.1
  psycopg2 == 2.8.6
  pygments == 2.8.1
  python-dateutil == 2.8.1
  python-dotenv == 0.16.0
  python-editor == 1.0.4
  python-multipart == 0.0.5
  pyyaml == 5.4.1
  redis == 3.5.3
  rq == 1.8.0
  rq-scheduler == 0.11.0
  selenium == 3.141.0
  six == 1.15.0
  sqlalchemy == 1.4.4
  starlette == 0.14.2
  strawberry-graphql == 0.53.0
  typing-extensions == 3.7.4.3
  urllib3 == 1.26.4
  werkzeug == 1.0.1

[options.extras_require]
dev =
  attrs == 20.3.0
  coverage == 5.5
  fakeredis == 1.5.0
  flake8 == 3.9.0
  freezegun == 1.1.0
  mccabe == 0.6.1
  packaging == 20.9
  pluggy == 0.13.1
  py == 1.10.0
  pycodestyle == 2.7.0
  pyflakes == 2.3.1
  pyparsing == 2.4.7
  pytest == 6.2.2
  sortedcontainers == 2.3.0
  toml == 0.10.2

[options.packages.find]
where = src

[tool:pytest]
testpaths =
  tests

[flake8]
max-line-length = 120
per-file-ignores =
  # imported but unused
  __init__.py: F401
exclude =
  src/sirendb/migrations

[coverage:run]
source =
  sirendb

[coverage:paths]
source =
  src

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
